# IT517G

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/sprites/: Enemy.ase  EnemyBullet.ase  EnemyDeath.ase  Nalle.ase  Numbers.ase  Player.ase
data/: atlas.json  sprite.frag  sprite.vert
include/glad/: glad.h
src/: .clang-format  Application.cpp  Application.hpp  Application_win.cpp  File.cpp  File.hpp  Input.hpp  Motor.cpp  Motor.hpp  Motor_win.cpp  Rendering.cpp  Rendering.hpp  implementations.cpp  logging.hpp  main.cpp  two.cpp
src/game/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  EnemyBullet.cpp  EnemyBullet.hpp  Player.cpp  Player.hpp  ShmupGame.cpp  ShmupGame.hpp
src/motor/: Application.cpp  Application.hpp  Application_win.cpp  Collision.cpp  Collision.hpp  Draw.hpp  Entity.hpp  File.cpp  File.hpp  Gfx.cpp  Gfx.hpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  Mem.cpp  Mem.hpp  Random.cpp  Random.hpp  Rendering.cpp  Rendering.hpp  Time.hpp  logging.hpp  typedefs.hpp
src/motor/components/: SpriteAnimator.cpp  SpriteAnimator.hpp
src/motor/libs/: glad.h  implementations.cpp
